--- a/src/index.scss
+++ b/src/index.scss
@@ -117,3 +117,49 @@ p {
   color: $primary;
   font-size: 1.2rem;
 }
+
+@media only screen and (max-width: 600px) {
+  body {
+    padding: 0.5rem;
+  }
+
+  .quiz-container {
+    width: 100%;
+    padding: 1rem;
+  }
+
+  .size-question {
+    font-size: 1.5rem;
+  }
+
+  .question {
+    font-size: 1rem;
+  }
+
+  .selected-answer {
+    font-size: 0.9rem;
+    padding: 0.5rem;
+    margin-top: 0.5rem;
+  }
+
+  button {
+    padding: 0.6rem 1.8rem;
+    font-size: 1rem;
+  }
+
+  .container {
+    flex-direction: column;
+  }
+
+  .result {
+    padding: 0.3rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+}
